--- a/martin_blog/src/view/posts/category.html
+++ b/martin_blog/src/view/posts/category.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Algo</h1>
+<h1>Categoria {{category.name}}</h1>
 {% if posts %}
 	{% for post in posts %}
 	<li>{{ post.title }}</li>
