changing styles and fix functionality

--- a/martin_blog/src/view/index.html
+++ b/martin_blog/src/view/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>El blog de martin</title>
+<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+<link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid">
@@ -20,5 +22,7 @@
 	{% block contenido %}
 	{% endblock %}
 </div>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
