--- a/martin_blog/src/view/index.html
+++ b/martin_blog/src/view/index.html
@@ -7,17 +7,22 @@
 <link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
-		<div class="col-md-12">
+	<div class="col-md-4"></div>
+		<div class="col-md-4">
 			<ul class="nav nav-pills">
+					<li>
+						<a href="/">Inicio</a>
+					</li>
 				{% for category in categories %}
 					<li>
-						<a href="posts/category/{{ category.id }}">{{ category.name }}</a>
+						<a href="/posts/category/{{ category.id }}">{{ category.name }}</a>
 					</li>
 				{% endfor %}
 			</ul>
 		</div>
+	<div class="col-md-4"></div>
 	</div>
 	{% block contenido %}
 	{% endblock %}
