--- a/martin_blog/src/view/posts/view.html
+++ b/martin_blog/src/view/posts/view.html
@@ -1,4 +1,13 @@
 {% extends "index.html" %}
 {% block contenido %}
-<h1>Soy un post</h1>
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-8">
+	<h1 class="post text-center">{{ post.title }}</h1>
+	<small class="post text-center">Creado el {{ post.created}}</small>
+	<hr/>
+	{{ post.content | safe }}
+</div>
+<div class="col-md-2"></div>
+</div>
 {% endblock %}
