--- a/martin_blog/src/view/posts/view.html
+++ b/martin_blog/src/view/posts/view.html
@@ -2,7 +2,7 @@
 {% block contenido %}
 <div class="row">
 <div class="col-md-2"></div>
-<div class="col-md-8">
+<div class="col-md-8 post">
 	<h1 class="post text-center">{{ post.title }}</h1>
 	<small class="post text-center">Creado el {{ post.created}}</small>
 	<hr/>
